# fastcontain

./: README.md  bench.py  build.py  pyproject.toml
fastcontain/: __init__.py  cy.pyx  fastcontain.py  fastcontain.pyi  py.py
tests/: lorem.txt  test_contain.py
