[tool.poetry]
name = "fastcontain"
version = "0.1.0"
description = ""
authors = ["bryan <bryan.deng002@gmail.com>"]
readme = "README.md"
build = "build.py"

[tool.poetry.dependencies]
python = "^3.8"
Cython = "^0.29.32"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.2.0"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
